<resources>
    <string name="app_name">InstantPastime</string>
    <string name="title_memory">Memory Game</string>
    <string name="title_nback">N-Back</string>

    <string name="action_next">NEXT</string>
    <string name="action_skip">SKIP</string>
    <string name="action_got">START NOW</string>

    <string name="play_again">Play again</string>
    <string name="install_app">Install app</string>
    <string name="trophy">Trophy</string>
    <string name="thank_you">Thank you</string>
    <string name="score">Score</string>
    <string name="loc_allow">Allow location</string>
    <string name="loc_refuse">No way</string>
    <string name="loc_can_change_later">Can be changed later in</string>
    <string name="loc_breadcrumb"><![CDATA[Preferences > Location]]></string>
    <string name="loc_long_question">Download images of places near your current location?</string>
    <string name="loc_location">Location</string>
    <string name="loc_location_accepted">Location accepted</string>
    <string name="loc_location_refused">Location refused</string>
    <string name="loc_ack_refusal">We won\'t use your location</string>
    <string name="loc_image_progress">Image %1$d/%2$d</string>
    <string name="loc_loading_images">Loading contextual images</string>
    <string name="loc_loaded_images">Loaded %1$d contextual images</string>
    <string name="menu_about">About</string>
    <string name="menu_install_app">Install App</string>
    <string name="menu_general_preference">Preferences</string>
    <string name="menu_credits">Credits</string>
    <string name="pref_geolocation_category">Geolocation</string>
    <string name="pref_contextual_image">Contextual images</string>
    <string name="pref_contextual_image_hint">Use images of nearby places</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="try_memory">Try Memory</string>
    <string name="try_nback">Try N-Back</string>
    <string name="welcome_to_main_app">Welcome to InstantPastime!</string>
    <string name="main_choose_game">Choose a game to start playing</string>
    <string name="main_memory_description">Classical memory game with contextual images</string>
    <string name="main_nback_description">“Dynamic” memory game</string>
    <string name="credits_app_iuam">This app was done as a project for the IUAM course at HES-SO</string>
    <string name="credits_images_sources">Images sources</string>
    <string name="credits_thanks_illustrators">Thanks to the following image illustrators for their amazing work!</string>
    <string name="credits_freepik">Freepik</string>
    <string name="credits_vectors_market">Vectors market</string>
    <string name="credits_pixabay">Pixabay for all the stock pictures</string>
    <string name="credits_close">Close</string>
    <string name="credits_brain_workshop">The N-Back game is based on Brain Workshop</string>
    <string name="credits_brain_workshop_url" translatable="false">brainworkshop.sourceforge.net/</string>
    <string name="credits_game_sources">Game sources</string>
    <string name="credits_google_play_services">Google Play Services</string>
    <string name="credits_clipartmax">ClipartMax</string>
    <string name="installing_app">Installing app</string>
    <string name="install_not_implemented">This is a mockup, the installation is not yet implemented</string>
    <string name="about_instantpastime">\t\t Instant app with quick brain training games which can be launched from QR codes in specific areas as an easy way to entertain the users and minimize the constraint of waiting for companies with services that require a waiting time.</string>
    <string name="about_instantpastime_next">\t\t At the same time, the project counts on a subvention from the state to promote areas of Switzerland and discovers interesting places and with games of type brain trainers to stimulate also intelectualmente the users.</string>

    <string name="about_games">Instant games:</string>
</resources>
