<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ScoreActivity">

        <!-- Image source: vector-markets vi flaticons  -->
        <ImageView
            android:src="@drawable/ic_trophy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/trophy"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/score" />

        <TextView android:id="@+id/score_final_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="90sp"
            tools:text="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/thank_you"
            android:layout_marginBottom="40dp"/>

        <Button android:id="@+id/score_replay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_marginBottom="10dp"/>

        <Button android:id="@+id/score_install_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install_app"/>

    </LinearLayout>
</ScrollView>
