<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">
    <TextView android:id="@+id/install_app_title"
        tools:text="App name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="100dp"
        />
    <TextView android:text="@string/installing_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"        android:textSize="16sp"/>
    <TextView android:text="@string/install_not_implemented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/install_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:minWidth="200dp"
        android:text="@string/credits_close" />
</LinearLayout>
